rubocop/examples/bad/Style_ClassAndModuleCamelCase.rb
# 'https://github.com/bbatsov/ruby-style-guide#camelcase-classes'

# Use CamelCase for classes and modules.

# bad
class Someclass
  ...
end

class Some_Class
  ...
end

class SomeXml
  ...
end

class XmlSomething
  ...
end
